tests/type_errors/tuple_in_logical_and.nos
# expect_error: Bool
# Tuples should not be usable in logical && operator
main() = (1, 2) && (3, 4)
